manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore-service
  namespace: default
  labels:
    app: semaphore
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: semaphore
