manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: semaphore.ashuto91.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore-service
                port:
                  number: 8080
